--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import 'normalize.css/normalize.css';
 @import 'variables';
+// @import 'print';
 
 ////////////////////////////////////////////////////////////////////////////////
 // GENERAL STUFF
@@ -54,71 +55,69 @@ html, body {
   }
 
   // This is the logo at the top of the ToC
-  &>img {
+  & > img {
     display: block;
     max-width: 100%;
+    width: 100px;
+    margin: $logo-margin auto;
   }
 
   &>.search {
     position: relative;
+    // margin: $nav-v-padding $nav-padding;
 
     input {
       background: $nav-bg;
       border-width: 0 0 1px 0;
       border-color: $search-box-border-color;
-      padding: 6px 0 6px 20px;
+      padding: 10px 0 10px 25px;
       box-sizing: border-box;
-      margin: $nav-v-padding $nav-padding;
       width: $nav-width - 30;
       outline: none;
       color: $nav-text;
+      font-size: 15px;
       border-radius: 0; /* ios has a default border radius */
     }
 
     &:before {
-      font-family: FontAwesome;
-      top:0;
-      left:-5px;
-      padding-right:10px;
-      content: "\f0a9";
-    }
-  }
-
-  .logo {
-    width: 100px;
-    margin: $logo-margin auto;
-  }
-
-  .search-results {
-    margin-top: 0;
-    box-sizing: border-box;
-    height: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    transition-property: height, margin;
-    transition-duration: 180ms;
-    transition-timing-function: ease-in-out;
-    background: $nav-subitem-bg;
-
-    &.visible {
-      height: 30%;
-      margin-bottom: 1em;
-    }
-
-    li {
-      margin: 1em $nav-padding;
-      line-height: 1;
-    }
-
-    a {
+      font-family: 'FontAwesome';
       color: $nav-text;
-      text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
+      position: relative;
+      left: 15px;
+      content: "\f002";
     }
   }
+
+  // .search-results {
+  //   margin-top: 0;
+  //   box-sizing: border-box;
+  //   height: 0;
+  //   overflow-y: auto;
+  //   overflow-x: hidden;
+  //   transition-property: height, margin;
+  //   transition-duration: 180ms;
+  //   transition-timing-function: ease-in-out;
+  //   background: $nav-subitem-bg;
+
+  //   &.visible {
+  //     height: 30%;
+  //     margin-bottom: 1em;
+  //   }
+
+  //   li {
+  //     margin: 1em $nav-padding;
+  //     line-height: 1;
+  //   }
+
+  //   a {
+  //     color: $nav-text;
+  //     text-decoration: none;
+
+  //     &:hover {
+  //       text-decoration: underline;
+  //     }
+  //   }
+  // }
 
 
   // The Table of Contents is composed of multiple nested
@@ -151,7 +150,7 @@ html, body {
   }
 
   .toc-list-h2 {
-    display: none;
+    // display: none;
     background-color: $nav-subitem-bg;
     font-weight: 500;
   }
@@ -200,20 +199,18 @@ html, body {
 // button to show navigation on mobile devices
 #nav-button {
   span {
-    display: block;
+    vertical-align: middle;
+    display: inline-block;
     $side-pad: $main-padding / 2 - 8px;
     padding: $side-pad $side-pad $side-pad;
     background-color: rgba($main-bg, 0.7);
-    transform-origin: 0 0;
-    transform: rotate(-90deg) translate(-100%, 0);
     border-radius: 0 0 0 5px;
   }
-  padding: 0 1.5em 5em 0; // increase touch size area
   display: none;
   position: fixed;
-  top: 0;
+  top: 12px;
   left: 0;
-  z-index: 100;
+  z-index: 15;
   color: #000;
   text-decoration: none;
   font-weight: bold;
@@ -345,7 +342,7 @@ html, body {
     text-transform: capitalize;
   }
 
-  h1:first-child, div:first-child + h1 {
+  > div > section:first-child > h1 {
     border-top-width: 0;
     margin-top: 0;
   }
@@ -359,11 +356,17 @@ html, body {
     padding-top: 1.2em;
     padding-bottom: 1.2em;
     background-image: linear-gradient(to bottom, rgba(#fff, 0.2), rgba(#fff, 0));
+
+    > .caption {
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.6;
+    }
   }
 
   // h2s right after h1s should bump right up
   // against the h1s.
-  h1 + h2, h1 + div + h2 {
+  h1 + h2, h1 + div + h2, h1 + div > h2 {
     margin-top: $h1-margin-bottom * -1;
     border-top: none;
   }
@@ -388,6 +391,7 @@ html, body {
   table {
     margin-bottom: 1em;
     overflow: auto;
+
     th,td {
       text-align: left;
       vertical-align: top;
@@ -438,7 +442,7 @@ html, body {
     background-color: rgba(0,0,0,0.05);
     padding: 3px;
     border-radius: 3px;
-    @extend %break-words;
+    // @extend %break-words;
     @extend %code-font;
   }
 
@@ -468,26 +472,6 @@ html, body {
     vertical-align: middle;
     padding-right: 0.5em;
     font-size: 14px;
-  }
-
-  aside.notice:before {
-    // @extend %icon-info-sign;
-  }
-
-  aside.warning:before {
-    // @extend %icon-exclamation-sign;
-  }
-
-  aside.success:before {
-    // @extend %icon-ok-sign;
-  }
-
-  .search-highlight {
-    padding: 2px;
-    margin: -2px;
-    border-radius: 4px;
-    border: 1px solid #F7E633;
-    background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
   }
 }
 
@@ -598,4 +582,8 @@ html, body {
 
 .highlight, .highlight .w {
   background-color: $code-bg;
+}
+
+.text-capitalize {
+  text-transform: capitalize;
 }
