--- a/assets/main.scss
+++ b/assets/main.scss
@@ -65,6 +65,7 @@ html, body {
   &>.search {
     position: relative;
     // margin: $nav-v-padding $nav-padding;
+    margin-bottom: 15px;
 
     input {
       background: $nav-bg;
