--- a/assets/main.scss
+++ b/assets/main.scss
@@ -351,7 +351,7 @@ html, body {
   h2 {
     @extend %header-font;
     font-size: 19px;
-    margin-top: 4em;
+    margin-top: 2em;
     margin-bottom: 0;
     border-top: 1px solid #ccc;
     padding-top: 1.2em;
@@ -575,4 +575,27 @@ html, body {
 
 .text-capitalize {
   text-transform: capitalize;
+}
+
+.tag {
+  background-color: #8391a5;
+  display: inline-block;
+  padding: 0 5px;
+  height: 24px;
+  line-height: 22px;
+  font-size: 12px;
+  color: #fff;
+  border-radius: 4px;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  margin-right: 5px;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.tag-primary {
+  background-color: rgba(32,160,255,.1);
+  border-color: rgba(32,160,255,.2);
+  color: #20a0ff;
 }
